--- a/LoanApplication/src/main/resources/application.properties
+++ b/LoanApplication/src/main/resources/application.properties
@@ -1,12 +1,8 @@
-#spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-#spring.datasource.username=postgres
-#spring.datasource.password=jakub123$
-#spring.datasource.driver-class-name=org.postgresql.Driver
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-#spring.flyway.enabled=true
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=jakub123$
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
 #logging.level.root=debug
-
-spring.flyway.url =jdbc:postgresql://localhost:5432/postgres
-spring.flyway.user=postgres
-spring.flyway.password=jakub123$
-spring.flyway.locations=classpath:db/migration
