--- a/LoanWebUi/package.json
+++ b/LoanWebUi/package.json
@@ -190,5 +190,81 @@
       "workbox-precaching": "6.5.4"
     },
     "hash": "20b2909b2247eae6b3ff2437f10a319e2eac1c7796b1f3aebfd75b4fd149c001"
+  },
+  "overrides": {
+    "@vaadin/bundles": "$@vaadin/bundles",
+    "@vaadin/accordion": "$@vaadin/accordion",
+    "@vaadin/app-layout": "$@vaadin/app-layout",
+    "@vaadin/avatar": "$@vaadin/avatar",
+    "@vaadin/avatar-group": "$@vaadin/avatar-group",
+    "@vaadin/button": "$@vaadin/button",
+    "@vaadin/checkbox": "$@vaadin/checkbox",
+    "@vaadin/checkbox-group": "$@vaadin/checkbox-group",
+    "@vaadin/combo-box": "$@vaadin/combo-box",
+    "@vaadin/component-base": "$@vaadin/component-base",
+    "@vaadin/confirm-dialog": "$@vaadin/confirm-dialog",
+    "@vaadin/context-menu": "$@vaadin/context-menu",
+    "@vaadin/custom-field": "$@vaadin/custom-field",
+    "@vaadin/date-picker": "$@vaadin/date-picker",
+    "@vaadin/date-time-picker": "$@vaadin/date-time-picker",
+    "@vaadin/details": "$@vaadin/details",
+    "@vaadin/dialog": "$@vaadin/dialog",
+    "@vaadin/email-field": "$@vaadin/email-field",
+    "@vaadin/field-base": "$@vaadin/field-base",
+    "@vaadin/field-highlighter": "$@vaadin/field-highlighter",
+    "@vaadin/form-layout": "$@vaadin/form-layout",
+    "@vaadin/grid": "$@vaadin/grid",
+    "@vaadin/horizontal-layout": "$@vaadin/horizontal-layout",
+    "@vaadin/icon": "$@vaadin/icon",
+    "@vaadin/icons": "$@vaadin/icons",
+    "@vaadin/input-container": "$@vaadin/input-container",
+    "@vaadin/integer-field": "$@vaadin/integer-field",
+    "@vaadin/item": "$@vaadin/item",
+    "@vaadin/list-box": "$@vaadin/list-box",
+    "@vaadin/lit-renderer": "$@vaadin/lit-renderer",
+    "@vaadin/login": "$@vaadin/login",
+    "@vaadin/menu-bar": "$@vaadin/menu-bar",
+    "@vaadin/message-input": "$@vaadin/message-input",
+    "@vaadin/message-list": "$@vaadin/message-list",
+    "@vaadin/multi-select-combo-box": "$@vaadin/multi-select-combo-box",
+    "@vaadin/notification": "$@vaadin/notification",
+    "@vaadin/number-field": "$@vaadin/number-field",
+    "@vaadin/overlay": "$@vaadin/overlay",
+    "@vaadin/password-field": "$@vaadin/password-field",
+    "@vaadin/polymer-legacy-adapter": "$@vaadin/polymer-legacy-adapter",
+    "@vaadin/progress-bar": "$@vaadin/progress-bar",
+    "@vaadin/radio-group": "$@vaadin/radio-group",
+    "@vaadin/scroller": "$@vaadin/scroller",
+    "@vaadin/select": "$@vaadin/select",
+    "@vaadin/split-layout": "$@vaadin/split-layout",
+    "@vaadin/tabs": "$@vaadin/tabs",
+    "@vaadin/tabsheet": "$@vaadin/tabsheet",
+    "@vaadin/text-area": "$@vaadin/text-area",
+    "@vaadin/text-field": "$@vaadin/text-field",
+    "@vaadin/time-picker": "$@vaadin/time-picker",
+    "@vaadin/tooltip": "$@vaadin/tooltip",
+    "@vaadin/upload": "$@vaadin/upload",
+    "@vaadin/vaadin-development-mode-detector": "$@vaadin/vaadin-development-mode-detector",
+    "@vaadin/vaadin-lumo-styles": "$@vaadin/vaadin-lumo-styles",
+    "@vaadin/vaadin-material-styles": "$@vaadin/vaadin-material-styles",
+    "@vaadin/router": "$@vaadin/router",
+    "@vaadin/vaadin-usage-statistics": "$@vaadin/vaadin-usage-statistics",
+    "@vaadin/vertical-layout": "$@vaadin/vertical-layout",
+    "@vaadin/virtual-list": "$@vaadin/virtual-list",
+    "@vaadin/board": "$@vaadin/board",
+    "@vaadin/charts": "$@vaadin/charts",
+    "@vaadin/cookie-consent": "$@vaadin/cookie-consent",
+    "@vaadin/crud": "$@vaadin/crud",
+    "@vaadin/grid-pro": "$@vaadin/grid-pro",
+    "@vaadin/map": "$@vaadin/map",
+    "@vaadin/rich-text-editor": "$@vaadin/rich-text-editor",
+    "@polymer/polymer": "$@polymer/polymer",
+    "@vaadin-component-factory/vcf-nav": "$@vaadin-component-factory/vcf-nav",
+    "@vaadin/common-frontend": "$@vaadin/common-frontend",
+    "@vaadin/vaadin-themable-mixin": "$@vaadin/vaadin-themable-mixin",
+    "construct-style-sheets-polyfill": "$construct-style-sheets-polyfill",
+    "date-fns": "$date-fns",
+    "lit": "$lit",
+    "proj4": "$proj4"
   }
 }
