L02 adding configuration for starting page

--- a/LoanApplication/src/main/resources/flyway/jre/conf/net.properties
+++ b/LoanApplication/src/main/resources/flyway/jre/conf/net.properties
@@ -9,7 +9,7 @@
 
 # Whether or not the DefaultProxySelector will default to System Proxy
 # settings when they do exist.
-# Set it to 'true' to enable this feature and check for platform
+# Set it to 'true' to enable this feature and check for platformDb
 # specific proxy settings
 # Note that the system properties that do explicitly set proxies
 # (like http.proxyHost) do take precedence over the system settings
