L02 adding finish registration + changing look of the box with labels

--- a/LoanApplication/src/main/resources/application.properties
+++ b/LoanApplication/src/main/resources/application.properties
@@ -7,5 +7,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
-generate.stub.data=true
+generate.stub.data=false
 #logging.level.root=debug
